--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "gulp": "~3.6.2",
     "gulp-uglify": "~0.3.0",
-    "gulp-cssmin": "~0.1.5"
+    "gulp-cssmin": "~0.1.5",
+    "gulp-shell": "~0.2.5"
   }
 }
